--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -20,7 +20,7 @@
     deleted = red
 [user]
 	name = Carlos Arango
-	email = carlos.arango@vividseats.com
+	email = licheca@gmail.com
 [push]
 	default = simple
 [core]
